--- a/posts/post002_old_create_a_simple_piano/post.mdx
+++ b/posts/post002_old_create_a_simple_piano/post.mdx
@@ -21,9 +21,9 @@ In this tutorial we will create a simple piano like this one:
 
 <center><img src="/imgs/posts/post002/piano-app.png"/></center>
 
-Before you start coding you need to know how SFML handles sounds. In order to play sounds in SFML you need a `sf::SoundBuffer`, which will storage audio samples of the sound, and a `sf::Sound` which will load a `sf::SoundBuffer` and after that will play the sound.
+Before you start coding you need to know how SFML handles sounds. In order to play sounds in SFML you need a `sf::SoundBuffer`, which will store audio samples of the sound, and a `sf::Sound` which will load a `sf::SoundBuffer` and after that will play the sound.
 
-More informations about SFML handling the sounds you can find here or check SFML API here.
+More information about SFML handling the sounds you can find here or check SFML API here.
 
 We will use std::array because we know the exact size of everything:
 
