--- a/posts/post010_creating_an_application_for_my_wedding_invitations_part1/post.mdx
+++ b/posts/post010_creating_an_application_for_my_wedding_invitations_part1/post.mdx
@@ -16,7 +16,7 @@ seoKeywords:
    - backend development
    - frontend development
 ---
-So.. I'm marrying and I decided that, because I'm a developer, I want to make a
+So.. I'm getting married and I decided that, because I'm a developer, I want to make a
 web application for accepting (or rejecting) going to my wedding and also
 selecting other options like if they come alone or with someone else or if they
 need vegetarian food. 
@@ -32,7 +32,7 @@ caring that much for frontend performance.
 
 What about storing the data? I don't want to store the data inside the same VPS
 as the application of the fear of losing it. Also, I don't want to use a cloud
-database because I don't to pay for it. So I found out that I could use a
+database because I don't want to pay for it. So I found out that I could use a
 Google Drive's Sheet and store the data to that spreadsheet. Still have not
 tested it, so will need to see how it plays with the app.
 
