--- a/posts/post014_alexprisacariu_v2/post.mdx
+++ b/posts/post014_alexprisacariu_v2/post.mdx
@@ -29,7 +29,7 @@ features and a better home page.
 
 For the first version of my website I wanted to be it very simple and
 minimalistic so resulted in a very simple website, but with only one theme that
-was a light theme that I chosed for it's simplicity.
+was a light theme that I chose for its simplicity.
 
 But after some time I see the limitations of my website. I really wanted to
 have a dark theme, to integrate more colors, more life to my website but I
@@ -56,8 +56,8 @@ I've worked on so I created a vertical timeline where the projects are grouped
 by the last year the project was worked on.
 
 In a previous project I worked on I've implemented a feature that was generating
-a webpage to the dimensions of an A4 page that when printed it was exactly how
-was seen on the screen. And I wanted to implement this feature on my website
+a webpage to the dimensions of an A4 page that when printed it was exactly as
+it was seen on the screen. And I wanted to implement this feature on my website
 for the CV page.
 
 In the first version it was quite simple to do this: just setting the div
