--- a/projects/airportlabs-communityapp/project.mdx
+++ b/projects/airportlabs-communityapp/project.mdx
@@ -40,8 +40,8 @@ techStack:
   - React
   - Meteor
 myInvolvement: >
-  Contributing to main development of the app, while primarily contributing to
-  the transition from multi-tenant modular monolith architecture to partitioned
+  Contributing to the main development of the Community App, focusing on the
+  transition from multi-tenant modular monolith architecture to partitioned
   multi-tenancy hub-and-spoke modular monolith architecture and integrating a
   plugins system.
 ---
@@ -66,14 +66,14 @@ Community App empowers users to make rapid, informed decisions, thereby enhancin
 collective operational efficiency and fostering a collaborative, data-sharing
 culture across the entire airport campus.
 
-I'm part of the core team of the Community App, team that is responsible for
+I'm part of the core team of the Community App, the team responsible for
 maintaining the app and improving the core features, while a separate team is
 responsible for adding new features.
 
-Beside being part of the core team of the Community App I'm also responsible for
+Besides being part of the core team of the Community App I'm also responsible for
 two big projects:
 
 1. Transitioning the app from multi-tenant modular monolith architecture to
   partitioned multi-tenancy hub-and-spoke modular monolith architecture;
-2. Integrating a plugins system where the features are developed as separated
+2. Integrating a plugins system where the features are developed as separate
   apps and integrated as plugins inside the Community App.
