--- a/projects/imocentral-ro/project.mdx
+++ b/projects/imocentral-ro/project.mdx
@@ -6,7 +6,7 @@ cover:
   webp: "/imgs/projects/imocentral.ro/cover.webp"
 tags:
   - NextJS
-description: "Real estate website optimized for speed and for Googlebot"
+description: "Real estate website optimized for speed and Googlebot"
 pinned: 2
 url: "https://imocentral.ro"
 otherImages:
@@ -40,28 +40,28 @@ myInvolvement: "Implemented the website"
 ---
 <a href="https://imocentral.ro" target="_blank" rel="noreferrer noopener">imocentral.ro</a>
 is a website created for a real estate agency for displaying their offers and
-offer informations about the company.
+offer information about the company.
 
 - created using NextJS;
 - optimized for Googlebot;
 - PWA;
 - using SSR (Server-side rendering) and ISR (Incremental Static Regeneration);
-- getting the data from [PanoroCRM][PanoroCRM].
+- gets the data from [PanoroCRM][PanoroCRM].
 
 My job was to implement the design into a functional website that would be very
-friendly with the Googlebot for crawling it and having max scores on
+friendly to Googlebot for crawling and having max scores on
 Lighthouse.
 
 Created using NextJS and using SSR and ISR to be able to have the best loading
-time, but also be able to update the data when is changed.
+time, but also be able to update the data when it is changed.
 
-Also I implemented for the website a PWA, and also published it on Google Play.
+I also implemented a PWA for the website, and even published it on Google Play.
 
 The data of the website is gathered from [PanoroCRM][PanoroCRM]. Every request that must be
-called from client is proxied through another request created by NextJs in
-order to not expose sensitive data.
+called from the client is proxied through another request created by NextJs
+to avoid exposing sensitive data.
 
 The website design and backend was changed in 2023 where I was not that much
-involved. One day I will upload a demo of it up.
+involved. One day I will upload a demo of it.
 
 [PanoroCRM]: /projects/panorocrm
