--- a/projects/laikado-es/project.mdx
+++ b/projects/laikado-es/project.mdx
@@ -24,13 +24,13 @@ techStack:
 myInvolvement: ""
 ---
 An aggregator portal for real estate and vehicles ads created while working
-at Rubrikk. My part of the project was primaly concentrated on the front-end
+at Rubrikk. My part of the project was primarily concentrated on the front-end
 side.
 
 - Created using NodeJS;
 - Using microservices;
-- I implemented a module-system making able for the whole team to implement
+- I implemented a module-system enabling the whole team to implement
   faster new features and work on them in parallel;
 - Introduced SCSS into the project;
 - Enhanced the Azure Pipelines in order for the unit tests to run at the CI
-  step and to upload automatically to S3 all the required step at the CD step.
+  step and to upload automatically to S3 all the required steps at the CD step.
