--- a/projects/panoro-ro/project.mdx
+++ b/projects/panoro-ro/project.mdx
@@ -26,9 +26,9 @@ myInvolvement: "Implemented the website"
 ---
 A real estate aggregator portal that was the first one to have 360 tours of
 real estates in Romania. The portal featured a dashboard where users and
-real estate agencies could register in order to add ads to portal.
+real estate agencies could register in order to add ads to the portal.
 <br/>
-Sadly the portal was abandoned because of not enough resources to continue
+Sadly the portal was abandoned due to a lack of resources to continue
 it. Only the dashboard is still used because of the editor of the 360 tours
 that can export a standalone link with only the tour.
 
@@ -37,4 +37,4 @@ that can export a standalone link with only the tour.
 - featured a [complete 360 tours editor](/projects/panorovr-editor) created
   using
   <a href="https://github.com/google/marzipano" target="_blank" rel="noopener">Google's Marzipano</a>;
-- dashboard where users could add ads to portal;
+- dashboard where users could add ads to the portal;
