--- a/projects/panorocrm/project.mdx
+++ b/projects/panorocrm/project.mdx
@@ -28,9 +28,9 @@ techStack:
 myInvolvement: ""
 ---
 PanoroCRM is a complex modular CRM with multiple modules for managing real
-estate offers, publish them to different real estate portals, create custom
-shareable websites with offers to be sent to the clients, add clients and keep
-track of them and their interests and see statistics about the activity done.
+estate offers, publishing them to different real estate portals, create custom
+shareable websites with offers to be sent to the clients, adding clients and keeping
+track of them and their interests and seeing statistics about the activity done.
 
 - complex application composed of many modules and services;
 - front-end created with ReactJS;
@@ -46,10 +46,10 @@ Some modules integrated:
   to ads for better organization;
 - history module provides users logs of their whole activity on the CRM;
 - agencies module provides the agencies administrators ability to add agents,
-  limit their number of ads that can add and track their activty;
+  limit the number of ads they can add and track their activity;
 - integration with
   <a href="https://www.imobiliare.ro/" target="_blank" rel="noreferrer noopener">imobiliare.ro</a>,
   <a href="https://www.storia.ro/" target="_blank" rel="noreferrer noopener">storia.ro</a>/<a href="https://www.olx.ro/" target="_blank" rel="noreferrer noopener">olx.ro</a>
   and <a href="https://alexprisacariu.dev/project/003_panoro.ro" target="_blank" rel="noreferrer noopener">panoro.ro</a> -
-  adding the ability to the users to add their ads directly from the CRM to
+  giving users the ability to add their ads directly from the CRM to
   those platforms.
