--- a/projects/panorovr-editor/project.mdx
+++ b/projects/panorovr-editor/project.mdx
@@ -9,7 +9,7 @@ cover:
 tags:
   - NodeJS
   - ReactJS
-description: "Web editor to create 360 tours with focus on real estates tours"
+description: "Web editor to create 360 tours with focus on real estate tours"
 otherImages:
   - png: "/imgs/projects/panorovr-editor/image1.png"
     webp: "/imgs/projects/panorovr-editor/image1.webp"
@@ -31,7 +31,7 @@ the 360 tours that were displayed on the portal.
 
 The web editor uses
 <a href="https://github.com/google/marzipano" target="_blank" rel="noopener">Google's Marzipano</a>
-where I extended it to support loading of the images using web workers.
+where I extended it to support image loading using web workers.
 
 Sadly the web editor was abandoned, but it is still used by some real estate
-agencies to create the 360 tours and then publish on real estate portals.
+agencies to create the 360 tours and then publish them on real estate portals.
