--- a/posts/post009_creating_a_radio_station_on_a_raspberry_pi_using_darkice_and_icecast2/post.mdx
+++ b/posts/post009_creating_a_radio_station_on_a_raspberry_pi_using_darkice_and_icecast2/post.mdx
@@ -18,11 +18,11 @@ seoKeywords:
    - Ubuntu
    - DIY project
 ---
-At my church we offer translations to people who cannot speak romanian, but the
+At my church we offer translations to people who cannot speak Romanian, but the
 system we are using is pretty low quality and is a lot of static noise and is 
 too expensive to upgrade it.
 
-So I've thinked I would be able to use a Raspberry Pi 3, an audio interface and
+So I thought I would be able to use a Raspberry Pi 3, an audio interface and
 some software to create a radio station that would then be hooked to the actual
 system.
 
@@ -34,18 +34,18 @@ So I've booted `Ubuntu 20.04` for Raspberry Pi and installed `icecast2` from the
 package manager.
 For the `darkice` the version from the package manager was **1.13**, but the
 latest available is **1.14** so I needed to compile it.  After some tries and
-searching and found that needed to install `ALSA` and compile another library,
-`lame`, because could not figure out how to configure `darkice` to use the 
-developer package from the package manager I figure it out and built the latest
+searching I found that needed to install `ALSA` and compile another library,
+`lame`, because I could not figure out how to configure `darkice` to use the 
+developer package from the package manager I figured it out and built the latest
 version of `darkice`.
 
 After playing out with both the `darkice` configuration and the `icecast2`
 configuration I had a working radio station.
-The only problem that I couldn't anticipated was that the latency was just too
+The only problem that I couldn't anticipate was that the latency was just too
 high for what I needed. I had around **5 to 10 seconds** of latency, which would
 be quite perfect for a normal radio station, but not what I needed.
 
-So here are the complet steps that I followed:
+So here are the complete steps that I followed:
 
 ```bash showLineNumbers
 # Installing icecast2
@@ -108,7 +108,7 @@ description     = Broadcast from Raspberry Pi # description of the stream
 #public          = yes       advertise this stream?
 ```
 
-To found out the right device you can run arecord -l and will return all the
+To find out the right device you can run arecord -l and will return all the
 recording devices available. The card index is the first number, in my case 1
 and the device index is the second number, in my case 0.
 
