--- a/projects/alexprisacariu-dev/project.mdx
+++ b/projects/alexprisacariu-dev/project.mdx
@@ -31,8 +31,8 @@ linkedPosts:
 
 The site you are currently on.
 
-This is the second version of the site where I was focused into creating a
+This is the second version of the site where I was focused on creating a
 better design and a better user experience.
 
-You can see in the blog post below more details about the changes I made. 
+You can see more details about the changes I made in the blog post below. 
 
