--- a/projects/and-wedding-invitations/project.mdx
+++ b/projects/and-wedding-invitations/project.mdx
@@ -5,7 +5,7 @@ cover: "/imgs/projects/and-wedding-invitations/image1.jpeg"
 tags:
   - Go
   - SolidJS
-description: "Application for the guests to my wedding to confirm the participation and to select options"
+description: "Application for my wedding guests to confirm their participation and to select options"
 pinned: 3
 url: ""
 otherImages:
@@ -26,12 +26,12 @@ myInvolvement: "Created all by myself"
 ---
 A small website written in Go and SolidJS for my wedding where my invited
 guests could confirm if they would come or not and also inform us if they would
-require additional accomodations like vegetarian food or if they would come
+require additional accommodations like vegetarian food or if they would come
 with kids.
 
 - each guest would receive a unique code which would act as an identifier;
-- supporting adressing to plural or singular if we knew they are a couple or just one person;
+- supporting addressing to plural or singular if we knew they are a couple or just one person;
 - created a small admin dashboard to add and edit the guests settings;
 - ability to only show some questions to each guests;
-- the data would be saved to an Google Sheet because is free;
+- the data would be saved to a Google Sheet because it is free;
 - using CloudFlare's free DNS servers.
