--- a/posts/post011_always_use_promise_all/post.mdx
+++ b/posts/post011_always_use_promise_all/post.mdx
@@ -68,27 +68,27 @@ const streams = {
 What is wrong here? Well, without much knowledge of JavaScript everything looks
 fine. But then why the code fails in some situations?
 
-If only one promise from `res.streams` fails then our code handles it very well 
+If only one promise from `res.streams{:js}` fails then our code handles it very well 
 and will respond to the client with the 500 status code.
 
 But if both promises fail then our code will crash.
 
 Why? Because we are not handling the second failed promise. When the first
-promise gets rejected it triggers the `catch` block and in our `catch` block of
-code we have a `return` that will break the loop and our second promise will
+promise gets rejected it triggers the `catch{:js}` block and in our `catch` block of
+code we have a `return{:js}` that will break the loop and our second promise will
 not have the chance to be checked thus crashing the service with the proper
 error (that we are not handling a promise).
 
 Yes, we can do it correctly using the for loop (or any loop) as long as we
 check every single promise we have. But why? We already have special methods
-inside the `Promise` object for handling all the cases we would want:
+inside the `Promise{:js}` object for handling all the cases we would want:
 
-- `Promise.all()` for when we want for all the promises to succeed;
-- `Promise.allSettled()` for when we just want for all the promises to be done; will never reject;
-- `Promise.any()` for when we want at least one promise to succeed; first one to succeed will be returned; if all fail then the method fails;
-- `Promise.race()` for when we want the fastest promise to succeed.
+- `Promise.all(){:js}` for when we want for all the promises to succeed;
+- `Promise.allSettled(){:js}` for when we just want for all the promises to be done; will never reject;
+- `Promise.any(){:js}` for when we want at least one promise to succeed; first one to succeed will be returned; if all fail then the method fails;
+- `Promise.race(){:js}` for when we want the fastest promise to succeed.
 
-And using the methods inside the `Promise` object allow us the benefit of
+And using the methods inside the `Promise{:js}` object allow us the benefit of
 better internal engine optimizations.
 
 Read more about the Promise object here:
